[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
authors = ["AXONE"]
edition = "2021"
homepage = "https://axone.xyz/"
keywords = ["cosmwasm", "blockchain"]
license = "BSD-3-Clause"
repository = "https://github.com/axone-protocol/contracts"
rust-version = "1.81"
version = "8.0.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[workspace.dependencies]
cosmwasm-schema = "3.0.2"
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_2_2"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
