[package]
authors.workspace = true
categories = ["cryptography::cryptocurrencies"]
description = "A CosmWasm Smart Contract which enables the storage and querying of Semantic data using RDF (Resource Description Framework), which represents information as semantic triples."
documentation = "https://docs.axone.xyz/contracts/okp4-cognitarium"
edition = "2021"
homepage.workspace = true
license-file.workspace = true
name = "axone-cognitarium"
readme = "README.md"
repository = "https://github.com/axone-protocol/contracts/tree/main/contracts/axone-cognitarium"
rust-version = "1.75"
version = "5.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axone-rdf.workspace = true
blake3 = "1.5.1"
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
derive_builder = "0.20.0"
either = "1.13.0"
rio_api.workspace = true
rio_turtle.workspace = true
rio_xml.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64 = "0.22.1"
cucumber = "0.21.1"
cw-multi-test.workspace = true
futures = "0.3.30"
serde_json = "1.0.120"
serde_yaml = "0.9.34"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[[test]]
harness = false
name = "cucumber"
path = "tests/e2e/main.rs"
