[package]
authors = { workspace = true }
description = "A CosmWasm Smart Contract which enables the storage and querying of Semantic data using RDF, which represents information as semantic triples."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "axone-cognitarium"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axone-rdf.workspace = true
blake3 = "1.5.5"
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
derive_builder = "0.20.2"
either = "1.13.0"
rio_api.workspace = true
rio_turtle.workspace = true
rio_xml.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64 = "0.22.1"
cucumber = "0.21.1"
cw-multi-test.workspace = true
futures = "0.3.31"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
testing.workspace = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[[test]]
harness = false
name = "cucumber"
path = "tests/e2e/main.rs"
