[package]
authors.workspace = true
categories = ["cryptography::cryptocurrencies"]
description = 'A CosmWasm Smart Contract which enables the orchestration of "Dataverses", a collection of digital resources governed by rules set by what is called a "Zone".'
documentation = "https://docs.axone.xyz/contracts/okp4-dataverse"
edition = "2021"
homepage.workspace = true
license-file.workspace = true
name = "axone-dataverse"
readme = "README.md"
repository = "https://github.com/axone-protocol/contracts/tree/main/contracts/axone-dataverse"
rust-version = "1.75"
version = "5.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axone-cognitarium.workspace = true
axone-cognitarium-client.workspace = true
axone-rdf.workspace = true
base64 = "0.22.1"
bs58 = "0.5.1"
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
itertools = "0.13.0"
multibase = "0.9.1"
rio_api.workspace = true
rio_turtle.workspace = true
schemars.workspace = true
serde.workspace = true
sha2 = "0.10.8"
thiserror.workspace = true
unsigned-varint = "0.8.0"

[dev-dependencies]
base64 = "0.22.1"
cw-multi-test.workspace = true
url = "2.5.2"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
