[package]
authors = { workspace = true }
description = "The Smart Contract overseeing and managing the Dataverse in the AXONE ecosystem."
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "axone-dataverse"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axone-cognitarium.workspace = true
axone-cognitarium-client.workspace = true
axone-rdf.workspace = true
base64 = "0.22.1"
bech32 = "0.11.0"
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
itertools = "0.14.0"
multibase = "0.9.2"
rio_api.workspace = true
ripemd = "0.1.3"
serde.workspace = true
sha2 = "0.10.9"
thiserror.workspace = true
unsigned-varint = "0.8.0"

[dev-dependencies]
base64 = "0.22.1"
testing.workspace = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
