[package]
authors.workspace = true
categories = ["cryptography::cryptocurrencies"]
description = "A CosmWasm Smart Contract which aims to provide GaaS (Governance as a Service) in any Cosmos blockchains."
documentation = "https://docs.axone.xyz/contracts/okp4-law-stone"
edition = "2021"
homepage.workspace = true
license-file.workspace = true
name = "axone-law-stone"
readme = "README.md"
repository = "https://github.com/axone-protocol/contracts/tree/main/contracts/axone-law-stone"
rust-version = "1.75"
version = "5.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axone-logic-bindings.workspace = true
axone-objectarium.workspace = true
axone-objectarium-client.workspace = true
axone-wasm.workspace = true
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
itertools = "0.13.0"
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
url = "2.5.2"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
