[package]
authors = { workspace = true }
description = "The Smart Contract providing Governance as a Service."
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "axone-law-stone"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axone-logic-bindings.workspace = true
axone-objectarium.workspace = true
axone-objectarium-client.workspace = true
axone-wasm.workspace = true
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
itertools = "0.14.0"
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
testing.workspace = true
url = "2.5.4"

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
