[package]
authors = { workspace = true }
description = "A Smart Contract which enables the storage of arbitrary unstructured Objects."
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "axone-objectarium"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
bs58 = "0.5.1"
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
derive_builder = "0.20.2"
either = "1.13.0"
enum-iterator = "2.1.0"
lzma-rs = "0.3.0"
md-5 = "0.10.6"
schemars.workspace = true
serde.workspace = true
sha2 = "0.10.8"
snap = "1"
thiserror.workspace = true

[dev-dependencies]
base64 = "0.22.1"
cw-multi-test.workspace = true
testing.workspace = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
