[package]
authors = { workspace = true }
description = "AXONE verifiable credential contract built with Abstract SDK."
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "axone-vc"
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
required-features = ["schema"]

[[bin]]
name = "publish"
required-features = ["daemon-bin"]

[[bin]]
name = "install"
required-features = ["daemon-bin"]

[features]
daemon-bin = [
  "cw-orch/daemon",
  "dep:clap",
  "dep:abstract-client",
  "dep:axone-networks",
  "dep:dotenv",
  "dep:env_logger",
  "dep:log",
]
default = ["export"]
export = []
library = []
schema = ["abstract-app/schema"]

[dependencies]
abstract-app.workspace = true
abstract-client = { workspace = true, optional = true }
abstract-interface.workspace = true
axone-networks = { path = "../../packages/axone-networks", version = "0.1.0", optional = true }
bech32 = "0.11.0"
clap = { workspace = true, optional = true, features = ["derive"] }
const_format.workspace = true
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-controllers.workspace = true
cw-orch.workspace = true
cw-storage-plus.workspace = true
dotenv = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
getset.workspace = true
log = { workspace = true, optional = true }
oxrdf = "0.2.4"
oxttl = "0.1.8"
rdf-canon = "0.15.3"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
time = { version = "0.3.44", features = ["parsing"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
abstract-app = { workspace = true, features = ["test-utils"] }
abstract-client.workspace = true
axone-vc = { path = "." }
serde.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]
