[package]
authors = ["OKP4"]
edition = "2021"
name = "okp4-dataverse"
rust-version = "1.75"
version = "4.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[dependencies]
base64 = "0.22.0"
bs58 = "0.5.1"
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
itertools = "0.12.1"
multibase = "0.9.1"
okp4-cognitarium-client.workspace = true
okp4-cognitarium.workspace = true
okp4-rdf.workspace = true
rio_api.workspace = true
rio_turtle.workspace = true
schemars.workspace = true
serde.workspace = true
sha2 = "0.10.8"
thiserror.workspace = true
unsigned-varint = "0.8.0"

[dev-dependencies]
base64 = "0.22.0"
cw-multi-test.workspace = true
url = "2.5.0"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
